[gd_scene load_steps=12 format=3 uid="uid://b0dffbsmbjirk"]

[ext_resource type="Script" uid="uid://dqb3l1wuhlsh4" path="res://Scenes/demon.gd" id="1_fiwpc"]
[ext_resource type="Shader" uid="uid://bsdkm426s2e25" path="res://Scenes/demon.tres" id="2_30acj"]
[ext_resource type="Texture2D" uid="uid://dt445sfbjw0bk" path="res://Sprites/DemonSpritesheet.png" id="2_li3uk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sku76"]
resource_local_to_scene = true
shader = ExtResource("2_30acj")
shader_parameter/Enabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbptv"]
atlas = ExtResource("2_li3uk")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsk2n"]
atlas = ExtResource("2_li3uk")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj3dt"]
atlas = ExtResource("2_li3uk")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0jtpg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbptv")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsk2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj3dt")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_irc8b"]
radius = 26.0
height = 58.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fiwpc"]
size = Vector2(76, 99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li3uk"]
size = Vector2(960, 640)

[node name="Demon" type="RigidBody2D"]
lock_rotation = true
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_fiwpc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_sku76")
sprite_frames = SubResource("SpriteFrames_0jtpg")
frame_progress = 0.318378

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 36)
shape = SubResource("CapsuleShape2D_irc8b")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, 11.5)
shape = SubResource("RectangleShape2D_fiwpc")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(-59, 0)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_li3uk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_jump"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
